# wordle-gear-academy

./: Makefile  README.md
.github/workflows/: ci.yml
game-session/: Cargo.toml
game-session/io/src/: lib.rs
game-session/src/: lib.rs
game-session/tests/: test_base.rs
wordle/: Cargo.toml
