[package]
name = "wordle"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
wordle-io.workspace = true

[dev-dependencies]
gtest.workspace = true
wordle-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
wordle-io.workspace = true
